lattekit-tools/transformer/gen/io/lattekit/parser/LatteParser.java
// Generated from /Users/maan/git/lattekit-android/lattekit-tools/transformer/src/main/antlr/io/lattekit/parser/Latte.g4 by ANTLR 4.5.1
package io.lattekit.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LatteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, LAYOUT_CLASS=13, LAYOUT_FUN=14, LAYOUT_FUN_BLOCK=15, 
		BRACE_OPEN=16, BRACE_CLOSE=17, PAREN_OPEN=18, PAREN_CLOSE=19, CHAR=20, 
		XML_TAG_OPEN=21, XML_TAG_CLOSE=22, PACKAGE_DECLARATION=23, IMPORT_STMT=24, 
		WS=25, STRING_LITERAL=26, UnterminatedStringLiteral=27;
	public static final int
		RULE_unit = 0, RULE_classDeclaration = 1, RULE_classBody = 2, RULE_code = 3, 
		RULE_packageDeclaration = 4, RULE_importStatement = 5, RULE_layoutFunction = 6, 
		RULE_layoutString = 7, RULE_layoutBody = 8, RULE_inlineCode = 9, RULE_codeBase = 10, 
		RULE_inlineCodeContent = 11, RULE_codeChar = 12, RULE_xmlTag = 13, RULE_propName = 14, 
		RULE_layoutProp = 15, RULE_strPropValue = 16;
	public static final String[] ruleNames = {
		"unit", "classDeclaration", "classBody", "code", "packageDeclaration", 
		"importStatement", "layoutFunction", "layoutString", "layoutBody", "inlineCode", 
		"codeBase", "inlineCodeContent", "codeChar", "xmlTag", "propName", "layoutProp", 
		"strPropValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"\"\"'", "'$'", "'<'", "'>'", "'/>'", "'/'", "'\"'", "'='", "'''", 
		"'@'", "':'", "'lxml'", null, null, null, "'{'", "'}'", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "LAYOUT_CLASS", "LAYOUT_FUN", "LAYOUT_FUN_BLOCK", "BRACE_OPEN", 
		"BRACE_CLOSE", "PAREN_OPEN", "PAREN_CLOSE", "CHAR", "XML_TAG_OPEN", "XML_TAG_CLOSE", 
		"PACKAGE_DECLARATION", "IMPORT_STMT", "WS", "STRING_LITERAL", "UnterminatedStringLiteral"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Latte.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LatteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UnitContext extends ParserRuleContext {
		public List<PackageDeclarationContext> packageDeclaration() {
			return getRuleContexts(PackageDeclarationContext.class);
		}
		public PackageDeclarationContext packageDeclaration(int i) {
			return getRuleContext(PackageDeclarationContext.class,i);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << LAYOUT_CLASS) | (1L << BRACE_OPEN) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR) | (1L << XML_TAG_OPEN) | (1L << PACKAGE_DECLARATION) | (1L << IMPORT_STMT) | (1L << WS) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(38);
				switch (_input.LA(1)) {
				case PACKAGE_DECLARATION:
					{
					setState(34);
					packageDeclaration();
					}
					break;
				case IMPORT_STMT:
					{
					setState(35);
					importStatement();
					}
					break;
				case LAYOUT_CLASS:
					{
					setState(36);
					classDeclaration();
					}
					break;
				case T__0:
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case BRACE_OPEN:
				case PAREN_OPEN:
				case PAREN_CLOSE:
				case CHAR:
				case XML_TAG_OPEN:
				case WS:
				case STRING_LITERAL:
					{
					setState(37);
					code();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode LAYOUT_CLASS() { return getToken(LatteParser.LAYOUT_CLASS, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(LAYOUT_CLASS);
			setState(44);
			match(BRACE_OPEN);
			setState(45);
			classBody();
			setState(46);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<LayoutFunctionContext> layoutFunction() {
			return getRuleContexts(LayoutFunctionContext.class);
		}
		public LayoutFunctionContext layoutFunction(int i) {
			return getRuleContext(LayoutFunctionContext.class,i);
		}
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << LAYOUT_FUN) | (1L << LAYOUT_FUN_BLOCK) | (1L << BRACE_OPEN) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR) | (1L << XML_TAG_OPEN) | (1L << WS) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(50);
				switch (_input.LA(1)) {
				case LAYOUT_FUN:
				case LAYOUT_FUN_BLOCK:
					{
					setState(48);
					layoutFunction();
					}
					break;
				case T__0:
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case T__10:
				case T__11:
				case BRACE_OPEN:
				case PAREN_OPEN:
				case PAREN_CLOSE:
				case CHAR:
				case XML_TAG_OPEN:
				case WS:
				case STRING_LITERAL:
					{
					setState(49);
					code();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public List<CodeCharContext> codeChar() {
			return getRuleContexts(CodeCharContext.class);
		}
		public CodeCharContext codeChar(int i) {
			return getRuleContext(CodeCharContext.class,i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(LatteParser.STRING_LITERAL, 0); }
		public List<TerminalNode> WS() { return getTokens(LatteParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LatteParser.WS, i);
		}
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_code);
		int _la;
		try {
			int _alt;
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(55);
						codeChar();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(58); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(STRING_LITERAL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(61);
						match(WS);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(64); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR) | (1L << XML_TAG_OPEN))) != 0)) {
					{
					{
					setState(66);
					codeChar();
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				match(BRACE_OPEN);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << BRACE_OPEN) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR) | (1L << XML_TAG_OPEN) | (1L << WS) | (1L << STRING_LITERAL))) != 0)) {
					{
					{
					setState(73);
					code();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79);
				match(BRACE_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE_DECLARATION() { return getToken(LatteParser.PACKAGE_DECLARATION, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(PACKAGE_DECLARATION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT_STMT() { return getToken(LatteParser.IMPORT_STMT, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(IMPORT_STMT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayoutFunctionContext extends ParserRuleContext {
		public TerminalNode LAYOUT_FUN() { return getToken(LatteParser.LAYOUT_FUN, 0); }
		public LayoutStringContext layoutString() {
			return getRuleContext(LayoutStringContext.class,0);
		}
		public TerminalNode LAYOUT_FUN_BLOCK() { return getToken(LatteParser.LAYOUT_FUN_BLOCK, 0); }
		public LayoutFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterLayoutFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitLayoutFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitLayoutFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutFunctionContext layoutFunction() throws RecognitionException {
		LayoutFunctionContext _localctx = new LayoutFunctionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_layoutFunction);
		try {
			setState(97);
			switch (_input.LA(1)) {
			case LAYOUT_FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(LAYOUT_FUN);
				setState(87);
				match(PAREN_OPEN);
				setState(88);
				layoutString();
				setState(89);
				match(PAREN_CLOSE);
				}
				break;
			case LAYOUT_FUN_BLOCK:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(LAYOUT_FUN_BLOCK);
				setState(92);
				match(PAREN_OPEN);
				setState(93);
				layoutString();
				setState(94);
				match(PAREN_CLOSE);
				setState(95);
				match(BRACE_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayoutStringContext extends ParserRuleContext {
		public LayoutBodyContext layoutBody() {
			return getRuleContext(LayoutBodyContext.class,0);
		}
		public LayoutStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterLayoutString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitLayoutString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitLayoutString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutStringContext layoutString() throws RecognitionException {
		LayoutStringContext _localctx = new LayoutStringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_layoutString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__0);
			setState(100);
			layoutBody();
			setState(101);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayoutBodyContext extends ParserRuleContext {
		public List<XmlTagContext> xmlTag() {
			return getRuleContexts(XmlTagContext.class);
		}
		public XmlTagContext xmlTag(int i) {
			return getRuleContext(XmlTagContext.class,i);
		}
		public List<InlineCodeContext> inlineCode() {
			return getRuleContexts(InlineCodeContext.class);
		}
		public InlineCodeContext inlineCode(int i) {
			return getRuleContext(InlineCodeContext.class,i);
		}
		public List<TerminalNode> CHAR() { return getTokens(LatteParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(LatteParser.CHAR, i);
		}
		public List<TerminalNode> WS() { return getTokens(LatteParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LatteParser.WS, i);
		}
		public LayoutBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layoutBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterLayoutBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitLayoutBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitLayoutBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LayoutBodyContext layoutBody() throws RecognitionException {
		LayoutBodyContext _localctx = new LayoutBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_layoutBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << BRACE_OPEN) | (1L << CHAR) | (1L << XML_TAG_OPEN) | (1L << WS))) != 0)) {
				{
				setState(107);
				switch (_input.LA(1)) {
				case XML_TAG_OPEN:
					{
					setState(103);
					xmlTag();
					}
					break;
				case T__1:
				case BRACE_OPEN:
					{
					setState(104);
					inlineCode();
					}
					break;
				case CHAR:
					{
					setState(105);
					match(CHAR);
					}
					break;
				case WS:
					{
					setState(106);
					match(WS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineCodeContext extends ParserRuleContext {
		public InlineCodeContentContext inlineCodeContent() {
			return getRuleContext(InlineCodeContentContext.class,0);
		}
		public InlineCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterInlineCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitInlineCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitInlineCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InlineCodeContext inlineCode() throws RecognitionException {
		InlineCodeContext _localctx = new InlineCodeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_inlineCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(112);
				match(T__1);
				}
			}

			setState(115);
			match(BRACE_OPEN);
			setState(116);
			inlineCodeContent();
			setState(117);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBaseContext extends ParserRuleContext {
		public LayoutStringContext layoutString() {
			return getRuleContext(LayoutStringContext.class,0);
		}
		public List<CodeCharContext> codeChar() {
			return getRuleContexts(CodeCharContext.class);
		}
		public CodeCharContext codeChar(int i) {
			return getRuleContext(CodeCharContext.class,i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(LatteParser.STRING_LITERAL, 0); }
		public List<TerminalNode> WS() { return getTokens(LatteParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LatteParser.WS, i);
		}
		public CodeBaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).enterCodeBase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatteListener ) ((LatteListener)listener).exitCodeBase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatteVisitor ) return ((LatteVisitor<? extends T>)visitor).visitCodeBase(this);
			else return visitor.visitChildren(this);
		}
	}
